--- a/docker/global/services/ngrok/config.yml
+++ b/docker/global/services/ngrok/config.yml
@@ -1,9 +1,9 @@
 version: '2'
 
-authtoken: ngrok-auth-token
+authtoken: 7kYU3EjyCdJgGMGAuCgtQ_2ybCSHHEGk6M6t9sNWhon
 
 tunnels:
   local-tg-setup:
     proto: http
     addr: local-server
-    domain: your-free-domain-here.ngrok-free.app
+    domain: e16f73dae3e4-17313614138973249815.ngrok-free.app
