--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -12,13 +12,15 @@ volumes:
   telegram-bot-api-data:
 
 services:
-  local-php:
+  local-php-fpm:
     container_name: local-php
     networks:
       - telegram-sdk-setup-network
     extends:
       file: ./docker-compose.core.yml
       service: core-php
+    expose:
+      - 9000
     depends_on:
       - local-db
       - local-redis
@@ -30,8 +32,11 @@ services:
     extends:
       file: ./docker-compose.core.yml
       service: core-server
+    ports:
+      - "80:80"
+      - "443:443"
     depends_on:
-      - local-php
+      - local-php-fpm
     volumes:
       - caddy-data:/data
       - caddy-config:/config
