ToDo List Items
- Caddy2 reverse proxy to access ngrok panel
- Cut off ngrok from external access to the container (internal network only)
- Updated Readme.md
- Added snippets for PHP

--- a/docker/local/services/caddy/Caddyfile
+++ b/docker/local/services/caddy/Caddyfile
@@ -1,6 +1,8 @@
-:80 {
-    root * /var/www/application/public
-    encode zstd gzip
-    php_fastcgi local-php-fpm:9000
-    file_server
+import snippets/*
+
+import laravel :80 /var/www/application/public local-php-fpm:9000
+import laravel tg-sdk.local /var/www/application/public local-php-fpm:9000
+
+ngrok.tg.local {
+    reverse_proxy local-ngrok:4040
 }
